# Software_Engineering

./: README.md  db.sqlite3
myblogs/: README.md  README_CN.md  db.sqlite3  manage.py  pyproject.toml
myblogs/blogs/: admin.py  forms.py  models.py  urls.py  views.py
myblogs/blogs/migrations/: 0001_initial.py  0002_alter_author_user.py  0003_auto_20230729_2019.py
myblogs/blogs/templates/blogs/: author_list.html  author_posts.html  base.html  date_posts.html  login.html  new_post.html  post_delete.html  post_detail.html  post_list.html  register.html  search_results.html  user_center.html
myblogs/myblogs_web/: asgi.py  settings.py  urls.py  wsgi.py
