[tool.poetry]
name = "myblogs"
version = "0.1.0"
description = ""
authors = ["LIU JIAHE <jiahe.liu@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
turbo-django = "^0.4.3"
channels-redis = "^4.1.0"
django-turbo-response = "^0.0.52"
bleach = "^6.0.0"
cssutils = "^2.7.1"
pip = "^23.2.1"
install = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
